Fix repair shop contact modal table  visibility

--- a/src/app/shared/components/ta-custom-card/ta-custom-card.component.scss
+++ b/src/app/shared/components/ta-custom-card/ta-custom-card.component.scss
@@ -535,7 +535,9 @@
             height: 0;
             opacity: 0;
             overflow: hidden;
-            transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+            transition:
+                height 0.3s ease-in-out,
+                opacity 0.3s ease-in-out;
             will-change: height, opacity;
 
             &.innactive {
@@ -548,7 +550,9 @@
             &.active {
                 opacity: 1;
                 overflow: visible;
-                transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+                transition:
+                    height 0.3s ease-in-out,
+                    opacity 0.3s ease-in-out;
                 height: 100%;
             }
 
@@ -604,4 +608,8 @@
     .ta-counter {
         background-color: $ta-light-grey-6 !important;
     }
+}
+
+.contacts-x-axis {
+    margin-left: 196px !important;
 }
