--- a/src/app/shared/components/ta-modal-table/components/ta-modal-table-contact/ta-modal-table-contact.component.scss
+++ b/src/app/shared/components/ta-modal-table/components/ta-modal-table-contact/ta-modal-table-contact.component.scss
@@ -1,6 +1,6 @@
 .contact-table-container {
     .contact-item {
-        grid-template-columns: 130px 140px 80px 200px;
+        grid-template-columns: 186px 130px 140px 80px 200px;
     }
 
     .contact-pinned {
