--- a/src/app/shared/components/ta-modal-table/ta-modal-table.component.scss
+++ b/src/app/shared/components/ta-modal-table/ta-modal-table.component.scss
@@ -52,7 +52,7 @@
         }
 
         &.contact-table-header {
-            grid-template-columns: 130px 140px 80px 200px;
+            grid-template-columns: 186px 130px 140px 80px 200px;
 
             .table-header-box {
                 padding-left: 6px;
